--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,9 +9,9 @@ services:
      - MYSQL_DATABASE=test
      - MYSQL_HOST=db
      - SECRETS_FILE=/hubb/secrets/serviceAccountKey.json
-     - APP_MODE=production
+     - APP_MODE=local
     build: .
-    image: hubb
+    image: asia.gcr.io/hubb-prod/hubb
     container_name: hubb
     volumes:
       - .:/hubb
